--- a/parrallel_coordinates_all_info/index.html
+++ b/parrallel_coordinates_all_info/index.html
@@ -130,7 +130,7 @@
     var axes = columns;
 
     var groups = ["ACT", "NSW", "NT", "QLD", "SA", "TAS", "VIC", "WA"];;
-    var colors = {"ACT": "#2d1a28", "NSW": "#a8c6d9", "NT": "#307952", "QLD": "#55ec08", "SA": "#7490c6", "TAS": "#e37985", "VIC": "#af6513", "WA": "#fcdb99"};;
+    var colors = {"ACT": "#9f1174", "NSW": "#474168", "NT": "#0b9913", "QLD": "#1a90ab", "SA": "#6338e6", "TAS": "#acc7d4", "VIC": "#ac9719", "WA": "#76b223"};;
 
     _(groups).each(function(group) {
       $('#legend').append("<div class='item'><div class='color' style='background: " + colors[group] + "';></div><div class='key'>" + group + "</div></div>");
